# urban-octo-engine

./: .gitignore
backend/: .python-version  Makefile  dev-requirements.txt  pyproject.toml  requirements.txt
backend/app/api/v1/: urls.py
backend/app/api/v1/products/: serializers.py  tests.py  urls.py  views.py
backend/app/common/: logger.py
backend/app/main/: logger.py  settings.py  urls.py
backend/app/main/tests/: base.py
backend/app/products/: admin.py  apps.py  metrics.py  models.py
backend/app/products/migrations/: 0001_initial.py
backend/config/: logger.json
backend/scripts/: init_pyenv.sh
deploy/main/: values.yaml
deploy/main/templates/: deployment.yaml  hpa.yaml  service.yaml
deploy/production/: values.yaml
web/: .gitignore  README.md  package-lock.json  package.json
web/src/: App.vue  main.js
web/src/api/: axios.js
web/src/components/: Error.vue  Icon.vue  Loader.vue
web/src/layouts/: DefaultLayout.vue
web/src/routes/routes/: index.js
web/src/stores/: errorStore.js  productStore.js
web/src/styles/: _variables.scss  main.scss
web/src/styles/global/: reset.scss
web/src/views/: Product.vue
